fix z-index for confirm popup

--- a/vtr-ui/src/app/components/pages/page-privacy/common-ui/confirmation-popup/confirmation-popup.component.scss
+++ b/vtr-ui/src/app/components/pages/page-privacy/common-ui/confirmation-popup/confirmation-popup.component.scss
@@ -5,6 +5,7 @@
   position: relative;
   &__overlay {
     position: fixed;
+    z-index: 1000; // top menu has z-index: 10000
     width: 100%;
     height: 100%;
     top: 0;
@@ -14,6 +15,7 @@
   }
   &__body {
     position: fixed;
+    z-index: 1001; // overlay has z-index: 1000
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
